Charts and page cleaned up with correct information for eay readability

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,3 +43,11 @@
     width: 50px;
 
 }
+
+.heading {
+    text-align: center;
+}
+
+.chart-description {
+    text-align: center;
+}
